Upgraded API version to 14. Added Holo theme.

--- a/app/src/main/res/layout/dicom_viewer.xml
+++ b/app/src/main/res/layout/dicom_viewer.xml
@@ -3,6 +3,8 @@
   Copyright (C) 2011 Pierre Malarme
  
   Authors: Pierre Malarme <pmalarme at ulb.ac.be>
+  Contributors:
+  			Vladyslav Vasyliev
  
   Institution: Laboratory of Image Synthesis and Analysis (LISA)
                Faculty of Applied Science
