--- a/app/src/main/res/layout/activity_dicomviewer.xml
+++ b/app/src/main/res/layout/activity_dicomviewer.xml
@@ -17,7 +17,7 @@
          the container. -->
     <fragment
         android:id="@+id/navigation_drawer"
-        android:name="be.ac.ulb.lisa.idot.android.dicomviewer.DICOMVIewerFragment"
+        android:name="be.ac.ulb.lisa.idot.android.dicomviewer.DrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
