--- a/app/src/main/res/layout/drawer_dicomviewer.xml
+++ b/app/src/main/res/layout/drawer_dicomviewer.xml
@@ -6,4 +6,4 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    tools:context="be.ac.ulb.lisa.idot.android.dicomviewer.DICOMVIewerFragment" />
+    tools:context="be.ac.ulb.lisa.idot.android.dicomviewer.DrawerFragment" />
