--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -14,7 +14,14 @@
         android:id="@+id/grayscale_view"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_alignParentRight="true"
+        android:layout_gravity="end"
         android:minWidth="100dip" />
+
+    <ListView
+        android:id="@+id/list_metadata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:paddingLeft="10dp"/>
 
 </FrameLayout>
