--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="app_theme" parent="android:Theme.Holo"></style>
+
+    <style name="app_theme.metadata" parent="app_theme">
+        <item name="android:textColor">#00FF00</item>
+    </style>
 </resources>
