DICOMV-41. Implemented adjustable ruler interface via custom ImageView.

--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -10,6 +10,11 @@
         android:layout_height="fill_parent"
         android:scaleType="matrix" />
 
+    <be.ac.ulb.lisa.idot.android.dicomviewer.view.RulerView
+        android:id="@+id/ruler_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
     <be.ac.ulb.lisa.idot.android.dicomviewer.view.GrayscaleWindowView
         android:id="@+id/grayscale_view"
         android:layout_width="wrap_content"
@@ -22,6 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:paddingLeft="10dp"/>
+        android:paddingLeft="10dp" />
 
 </FrameLayout>
