--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FF777777"
     tools:context="be.ac.ulb.lisa.idot.android.dicomviewer.DICOMFragment">
 
     <be.ac.ulb.lisa.idot.android.dicomviewer.view.DICOMImageView
