Added calculation square of drawed figure.  Added new View for drawing the figure to calculate the square.

--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -20,6 +20,10 @@
         android:id="@+id/protractor_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+    <be.ac.ulb.lisa.idot.android.dicomviewer.view.FigureDrawingView
+        android:id="@+id/figure_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
     <ListView
         android:id="@+id/list_metadata"
