Added width and center for grayscale size according to microdicom. Added default value.

--- a/app/src/main/res/layout/drawer_dicomviewer.xml
+++ b/app/src/main/res/layout/drawer_dicomviewer.xml
@@ -7,6 +7,9 @@
     android:layout_gravity="left"
     android:focusableInTouchMode="true"
     android:background="#cccc"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="1dp"
+    android:choiceMode="singleChoice"
 ></ExpandableListView>
 
 
