--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer-array name="presets_numbers">
-        <item>-1000</item>
-        <item>-500</item>
-        <item>-75</item>
-        <item>0</item>
-        <item>15</item>
-        <item>30</item>
-        <item>40</item>
-        <item>30</item>
-        <item>42</item>
+    <integer-array name="presets_numbers_center">
         <item>25</item>
-        <item>50</item>
+        <item>-400</item>
+        <item>10</item>
+        <item>10</item>
+        <item>300</item>
+        <item>20</item>
         <item>200</item>
-        <item>700</item>
+        <item>500</item>
+    </integer-array>
+    <integer-array name="presets_numbers_width">
+        <item>95</item>
+        <item>1600</item>
+        <item>450</item>
+        <item>450</item>
+        <item>2500</item>
+        <item>300</item>
+        <item>1000</item>
+        <item>4000</item>
     </integer-array>
 </resources>
