Adding drawing figure of one annotation.

--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -24,6 +24,10 @@
         android:id="@+id/figure_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+    <be.ac.ulb.lisa.idot.android.dicomviewer.view.AnnotationView
+        android:id="@+id/annotation_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
     <ListView
         android:id="@+id/list_metadata"
