--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -2,18 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:descendantFocusability="blocksDescendants">
 
+    <ImageView
+        android:id="@+id/expandableListIndicator"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/expander_group" />
 
     <TextView
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingLeft="7dp"
         android:textSize="17dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="7dp"
+        android:paddingTop="9dp"
+        android:paddingBottom="9dp"
         android:textColor="#000000" />
 
 </LinearLayout>
