Wrote UI tests for tool view's except for the AnnotationView

--- a/app/src/main/res/layout/fragment_dicom.xml
+++ b/app/src/main/res/layout/fragment_dicom.xml
@@ -20,8 +20,8 @@
         android:id="@+id/protractor_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-    <be.ac.ulb.lisa.idot.android.dicomviewer.view.FigureDrawingView
-        android:id="@+id/figure_view"
+    <be.ac.ulb.lisa.idot.android.dicomviewer.view.AreaView
+        android:id="@+id/area_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
     <be.ac.ulb.lisa.idot.android.dicomviewer.view.AnnotationView
